--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
 asgiref==3.6.0
+certifi==2023.5.7
+charset-normalizer==3.1.0
 Django==4.2.1
 djangorestframework==3.14.0
 djangorestframework-api-key==2.3.0
-dnstwist==20230413
+dnspython==2.3.0
+dnstwist==20230509
+idna==3.4
+ppdeep==20200505
 pytz==2023.3
+requests==2.30.0
 sqlparse==0.4.4
+tld==0.13
 tzdata==2023.3
+urllib3==2.0.2
+whois==0.9.27
